Fixed spacing above events on home page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,10 @@ html {
 
 /****** Body ******/
 
+.events-label {
+  height: 45px;
+}
+
 body { 
   padding-bottom: 125px;
   min-height: 100%;
